--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
-    <link rel="stylesheet" href="src/styles.css" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Weather App</title>
   </head>
   <body>
     <div class="container">
@@ -37,19 +37,15 @@
             </ul>
           </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/Sushi-Samurai/vanilla-weather-app"
+            target="_blank"
+            >Open-source code</a
+          >, by Sam Turner
+        </small>
       </div>
-      <small>
-        <a
-          href="https://github.com/Sushi-Samurai/vanilla-weather-app"
-          target="_blank"
-          >Open-source code</a
-        >, by Sam Turner
-      </small>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
