--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="col-6">
               <div class="d-flex weather-temperature">
                 <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+                  src="imgs/scattered-clouds-day.png"
                   alt="cloudy"
                   id="icon"
                 />
