--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Weather App</title>
   </head>
   <body>
@@ -18,10 +19,10 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>City</h1>
+            <h1 id="city"></h1>
             <ul>
               <li>Weekday 00:00</li>
-              <li>Clear</li>
+              <li id="description"></li>
             </ul>
           </div>
 
@@ -33,15 +34,15 @@
                   alt="cloudy"
                   id="icon"
                 />
-                <strong>00</strong
+                <strong id="temperature"></strong
                 ><span class="units">°C | <a href="#">°F</a></span>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Precipitation: 0%</li>
-                <li>Humidity: 0%</li>
-                <li>Wind: 0 km/h</li>
+                <li>Precipitation: <span id="precipitation"></span>%</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> mph</li>
               </ul>
             </div>
           </div>
