Implemented the unit conversion

--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
                   id="icon"
                 />
                 <strong id="temperature"></strong
-                ><span class="units">°C | <a href="#">°F</a></span>
+                ><span class="units"
+                  ><a href="#" class="active unit-link" id="celsius-link">°C</a>
+                  |
+                  <a href="#" class="unit-link" id="fahrenheit-link"
+                    >°F</a
+                  ></span
+                >
               </div>
             </div>
             <div class="col-6">
