Removed the Fahrenheit conversion 👋

--- a/index.html
+++ b/index.html
@@ -54,14 +54,7 @@
                   alt="cloudy"
                   id="icon"
                 />
-                <strong id="temperature"></strong
-                ><span class="units"
-                  ><a href="#" class="active unit-link" id="celsius-link">°C</a>
-                  |
-                  <a href="#" class="unit-link" id="fahrenheit-link"
-                    >°F</a
-                  ></span
-                >
+                <strong id="temperature"></strong><span class="units">°F</span>
               </div>
             </div>
             <div class="col-6">
