--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
                   alt="cloudy"
                   id="icon"
                 />
-                <strong id="temperature"></strong><span class="units">°F</span>
+                <strong id="temperature"></strong
+                ><span class="units">
+                  <a href="#" id="fahrenheit-link" class="active">°F</a> |
+                  <a href="#" id="celsius-link">°C</a>
+                </span>
               </div>
             </div>
             <div class="col-6">
